modules/environment/ec2.tf
# EC2 Instance with Docker and Nginx
resource "aws_instance" "app" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = var.private_subnet_ids[0]
  vpc_security_group_ids = [var.security_group_id]
  iam_instance_profile   = aws_iam_instance_profile.ec2_profile.name

  user_data = templatefile("${path.module}/user_data.sh", {
    prefix         = var.prefix
    rds_endpoint   = aws_db_instance.db_instance.address
    redis_endpoint = aws_elasticache_replication_group.redis.primary_endpoint_address
    db_username    = var.db_username
    db_password    = var.db_password
  })

  tags = {
    Name = "${var.prefix}-ec2-app"
  }
}

# Create an instance profile for the EC2 instance
resource "aws_iam_instance_profile" "ec2_profile" {
  name = "${var.prefix}-ec2-profile"
  role = var.ec2_role_name
  tags = {}
}
